# pico_sync

./: .gitignore  .picoignore  LICENSE  MANIFEST.in  README.md  README_EN.md  pico_sync.py  pico_sync_portable.py  project_problem.md  pyproject.toml  readme_problem.md  requirements.txt
.github/workflows/: ci.yml
.opencode/: context.md
docs/en/dev/: cli_function.md  pick_function.md
docs/en/users/: readme_cli.md  readme_pick.md
docs/ua/dev/: cli_function.md  pick_function.md
docs/ua/users/: readme_cli.md  readme_pick.md
meta/: latest_version.json
pico_sync/: __init__.py  __main__.py  cli.py  config.py  constants.py  delta.py  filter.py  ignore.py  lang.py  pick.py  port.py  projects.py  settings.py
tests/: test_cli.py  test_config.py  test_delta.py  test_filter.py  test_ignore.py  test_lang.py  test_pick.py  test_port.py  test_projects.py  test_settings.py
