[project]
name = "pico_sync"
version = "1.1.4"
description = "MicroPython deployment & synchronization tool for Raspberry Pi Pico"
readme = "README_EN.md"
requires-python = ">=3.7"
license = { text = "AGPL-3.0" }
keywords = ["pico", "micropython", "deployment", "sync", "rp2040", "cli", "filesystem", "mpremote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Archiving :: Mirroring",
]

authors = [
    { name = "Anatolii Derkachenko", email = "toldk98@gmail.com" }
]

dependencies = [
    "pyserial>=3.5",
    "mpremote>=1.21.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.setuptools.packages.find]
include = ["pico_sync"]

[project.scripts]
picosync = "pico_sync.cli:main"

[project.urls]
homepage = "https://github.com/toldk98/pico_sync"
source = "https://github.com/toldk98/pico_sync"
issues = "https://github.com/toldk98/pico_sync/issues"
